--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -19,51 +19,59 @@
   <body>
     <nav>
       <img src="./images/slack-logo.png" alt="slack_logo" />
-      <ul>
+      <!-- <ul>
         <li>Why Slack?</li>
         <li>Pricing</li>
         <li>About Us</li>
         <li>Your Workspaces</li>
-      </ul>
+      </ul> -->
     </nav>
     <header>
-      <img src="./images/home_talking.png" alt="home_work_happening" />
-      <h1>Where Work Happens</h1>
+      <h1>Where Work<br>Happens</h1>
       <p>
         When your team needs to kick off a project, hire a new employee, deploy
         some code, review a sales contract, finalize next year's budget, measure
         an A/B test, plan your next office opening, and more, Slack has you
         covered.
       </p>
-      <button type="button" name="button">GET STARTED</button>
-      <p>Already using Slack? <a href="#">Sign in</a></p>
+      <br>
+      <input type="email" placeholder="Email address" email="" id="">
+      <button type="button" name="button"><strong>GET STARTED</strong></button>
+      <p class="text-center">Already using Slack? <a href="#">Sign in</a></p>
+      <img src="./images/home_talking.png" alt="home_work_happening" />
     </header>
     <main>
-      <div>
+      <div class="section2">
         <h2>You're in good company</h2>
         <p>
           Millions of people around the world have already made Slack the place
           where their work happens.
         </p>
-        <button>DISCOVER WHY</button>
+        <button class="discover-btn"><strong>DISCOVER WHY</strong></button>
+        <br>
         <img src="./images/airbnb-logo.png" alt="" />
         <img src="./images/capital-one-logo.png" alt="" />
         <img src="./images/harvard-logo.png" alt="" />
         <img src="./images/los-angeles-times-logo.png" alt="" />
         <img src="./images/oracle-logo.png" alt="" />
         <img src="./images/ticketmaster-logo.png" alt="" />
+        <br>
+        <br>
       </div>
-      <div>
-        <p>Try it for free</p>
+      <div class="section3">
+        <h3>Try it for free</h3>
         <p>Already using Slack? <a href="">Sign in</a></p>
-        <button type="button" name="button">GET STARTED</button>
+        <input type="email" placeholder="Email address" email="" id="">
+        <button type="button" name="button"><strong>GET STARTED</strong></button>
+        <br>
+        <br>
       </div>
     </main>
     <footer>
-      <div>
-        <img src="./images/iso-slack.png" alt="" />
+      <img src="./images/iso-slack.png" alt="" />
+      <div class="footer">
         <ul>
-          <li>COMPANY</li>
+          <li><strong>COMPANY</strong></li>
           <li>About Us</li>
           <li>Careers</li>
           <li>Blog</li>
@@ -71,7 +79,7 @@
           <li>Brand Guidelines</li>
         </ul>
         <ul>
-          <li>PRODUCT</li>
+          <li><strong>PRODUCT</strong></li>
           <li>Why Slack?</li>
           <li>Enterprise</li>
           <li>Customer Stories</li>
@@ -79,7 +87,7 @@
           <li>Security</li>
         </ul>
         <ul>
-          <li>RESOURCES</li>
+          <li><strong>RESOURCES</strong></li>
           <li>Download</li>
           <li>Help Center</li>
           <li>Guides</li>
@@ -88,22 +96,24 @@
           <li>API</li>
         </ul>
         <ul>
-          <li>EXTRAS</li>
+          <li><strong>EXTRAS</strong></li>
           <li>Podcast</li>
           <li>Slack Shop</li>
           <li>Slack at Work</li>
           <li>Slack Fund</li>
         </ul>
       </div>
-      <div>
-        <ul>
+      <div class="gray-foot">
+        <ul class="bar">
           <li>Status</li>
           <li>Privacy & Terms</li>
           <li>Contact Us</li>
         </ul>
-        <div>
-          <img src="./images/us-flag.png" alt="" />
-          <span>English (US)</span>
+        <div class="footer2">
+          <span><img src="./images/us-flag.png" alt="" />
+           English (US)</span>
+          <br>
+          <br>
           <i class="fas fa-chevron-down"></i>
           <i class="fab fa-twitter"></i>
           <i class="fab fa-facebook-f"></i>
